--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ header{
 
 .title{
     position: relative;
+    visibility: hidden;
 }
 
 .fade-in
@@ -25,6 +26,7 @@ header{
     0%{
         opacity: 0;
         top: 2rem;
+        visibility: visible;
 
     }
     100%{
