--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@ body{
     padding: 0;
     box-sizing: border-box;
     font-family: 'Sen', sans-serif;
+    background-color: rgb(241 245 249);
 }
 header{
     width: 80%;
