--- a/styles/style.css
+++ b/styles/style.css
@@ -117,6 +117,11 @@ i{
     color: #cb3837;
     cursor: pointer;
 }
+
+.linkedIn{
+    color: #cb3837;
+    cursor: pointer;
+}
 .skills{
     display: flex;
 }
