--- a/styles/style.css
+++ b/styles/style.css
@@ -1,136 +1,149 @@
-html{
+html {
     scroll-behavior: smooth;
 }
-body{
+
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Sen', sans-serif;
     background-color: rgb(241 245 249);
 }
-header{
+
+header {
     width: 80%;
     margin: 0 auto;
 }
 
-.title{
+.title {
     position: relative;
-    top:2rem;
+    top: 2rem;
     opacity: 0;
 }
 
-.fade-in
-{
+.fade-in {
     animation: fadeIn 2s;
 }
 
-@keyframes fadeIn{
-    0%{
+@keyframes fadeIn {
+    0% {
         opacity: 0;
         top: 2rem;
 
     }
-    100%{
+
+    100% {
         opacity: 1;
         top: 0;
     }
 }
 
 
-nav ul{
+nav ul {
     display: flex;
     justify-content: space-around;
     list-style-type: none;
 }
 
-nav ul li a{
+nav ul li a {
     text-decoration: none;
 }
 
-a{
+a {
     color: #2965f1;
 }
 
-a:hover{
+a:hover {
     color: #fb503b;
     transition: 0.5s;
 }
 
-main{
+main {
     width: 80%;
     margin: 0 auto;
 }
 
-i{
+i {
     font-size: 3rem;
     padding: 2rem;
 
 }
-.html{
+
+.html {
     color: #FF5733;
 }
 
-.css{
-    color:#2965f1;
+.css {
+    color: #2965f1;
 }
 
-.js{
-    color:#f0db4f;
+.js {
+    color: #f0db4f;
 }
 
-.php{
-    color:#8993be;
+.php {
+    color: #8993be;
 }
 
 .node {
-    color:#3C873A;
-}
-.laravel{
-    color:#fb503b;
+    color: #3C873A;
 }
 
-.vue{
-    color:#42b883;
+.laravel {
+    color: #fb503b;
 }
 
-.react{
-    color:#61dafb;
+.vue {
+    color: #42b883;
 }
 
-.bootstrap{
-    color:#563d7c;
+.react {
+    color: #61dafb;
 }
 
-.git{
-    color:#f1502f;
+.bootstrap {
+    color: #563d7c;
 }
 
-.gitkraken{
-    color:#009688;
+.docker {
+    color: #0db7ed;
 }
 
-.npm{
-    color:#cb3837;
+.linux {
+    color: yellow;
 }
 
-.email{
+.git {
+    color: #f1502f;
+}
+
+.gitkraken {
+    color: #009688;
+}
+
+.npm {
+    color: #cb3837;
+}
+
+.email {
     color: #cb3837;
     cursor: pointer;
 }
 
-.linkedIn{
+.linkedIn {
     color: #cb3837;
     cursor: pointer;
 }
-.skills{
+
+.skills {
     display: flex;
 }
 
-.skills div p{
+.skills div p {
     text-align: center;
 }
 
-footer{
+footer {
     width: 80%;
     margin: 0 auto;
     display: flex;
@@ -138,10 +151,11 @@ footer{
     align-items: center;
 
 }
-footer p{
+
+footer p {
     padding: 2rem;
 }
 
-footer p .creator{
+footer p .creator {
     font-weight: bold;
 }
